Generate json graph / d3.js scripts